fix(app): Fix alignment issues in modals, fix titlebar on page

--- a/app/src/components/LabwareCalibration/styles.css
+++ b/app/src/components/LabwareCalibration/styles.css
@@ -60,6 +60,6 @@
 .spinner {
   width: 6rem;
   display: block;
-  margin: auto;
+  margin: 45% auto auto;
   color: var(--c-font-light);
 }
