--- a/components/src/modals/modals.css
+++ b/components/src/modals/modals.css
@@ -9,24 +9,21 @@
     margin: 0 auto;
     padding: 1rem;
     border-radius: 0.5rem;
+    position: relative;
   }
 }
 
 .modal {
-  @apply --absolute-fill;
-  @apply --center-children;
+  @apply --modal;
 
   padding: 4rem;
 }
 
 .modal_page {
   @apply --absolute-fill;
+  @apply --flex-start;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 5rem 2rem 1rem;
+  padding-top: 5rem;
 }
 
 .overlay {
@@ -40,6 +37,7 @@
   top: 0;
   left: 0;
   right: 0;
+  width: 100%;
   z-index: 3;
 }
 
