--- a/components/src/styles/positioning.css
+++ b/components/src/styles/positioning.css
@@ -15,6 +15,7 @@
 
   --flex-start: {
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
     align-items: center;
   }
